Added new reference: Quantum Image Processing: A Mathematical Toolbox by Artyom M. Grigoryan and Sos Agaian

--- a/examples/General1Dand2DQFT.ipynb
+++ b/examples/General1Dand2DQFT.ipynb
@@ -19,7 +19,9 @@
     "# Alexis A. Gomez, Dr. Artyom Grigoryan,\n",
     "# UTSA ECE, March 11, 2023\n",
     "#\n",
-    "# Reference http://dx.doi.org/10.1117/12.3013940\n",
+    "# Reference: \n",
+    "#   http://dx.doi.org/10.1117/12.3013940\n",
+    "#   Quantum Image Processing: A Mathematical Toolbox by Artyom M. Grigoryan and Sos Agaian\n",
     "\n",
     "# Import to Draw Circuit and Display Version\n",
     "from qiskit import __version__\n",
